[bubble] Support bubbles feature

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+*.iml
+*.apk
+*.ap_
+*.class
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+.idea/
 .DS_Store
 /build
+build/
+/captures
